Fix multi-column-container breaking on Safari

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -402,10 +402,6 @@ td {
             column-span: all;
         }
 
-        h3 {
-            break-before: column;
-        }
-
         p {
             break-inside: avoid;
         }
